Replace the noticon used for the GAPPS add user button. noticon-add is small and has bottom and right margin. noticon-plus is better and easier to use. Fixes #2226

--- a/assets/stylesheets/sections/_domain-search.scss
+++ b/assets/stylesheets/sections/_domain-search.scss
@@ -218,9 +218,9 @@ form.google-apps-dialog {
 
 		&:before {
 			position: absolute;
-				left: 15px;
-				top: 6px;
-			@include noticon( '\f8b3', 60px );
+				left: 10px;
+				top: 7px;
+			@include noticon( '\f510', 30px );
 		}
 	}
 }
